[gd_scene load_steps=3 format=3 uid="uid://dtc7liy2o51dv"]

[ext_resource type="Script" uid="uid://biagfnmt23k5" path="res://scripts/BattleUI.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://bwiruao8f573s" path="res://scenes/SpawnerPanel.tscn" id="2_spawner"]

[node name="BattleUI" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBackground" type="ColorRect" parent="MainMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="MenuContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="GameTitle" type="Label" parent="MainMenu/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "TERRION RTS"
horizontal_alignment = 1

[node name="StartGameButton" type="Button" parent="MainMenu/MenuContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üöÄ –ù–ê–ß–ê–¢–¨ –ò–ì–†–£ üöÄ"

[node name="ExitButton" type="Button" parent="MainMenu/MenuContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚ùå –í–´–•–û–î"

[node name="GameUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="Panel" parent="GameUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="TopContainer" type="HBoxContainer" parent="GameUI/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInfo" type="Label" parent="GameUI/TopPanel/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "üü¶ –ò–ì–†–û–ö | ‚ö°100 | üíé0 | ‚ù§Ô∏è100"
vertical_alignment = 1

[node name="EnemyInfo" type="Label" parent="GameUI/TopPanel/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "üü• –í–†–ê–ì | ‚ö°100 | üíé0 | ‚ù§Ô∏è100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BottomPanel" type="Panel" parent="GameUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="BottomContainer" type="VBoxContainer" parent="GameUI/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="BuildingRow" type="HBoxContainer" parent="GameUI/BottomPanel/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BarracksButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/BuildingRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üè∞
–ö–ê–ó–ê–†–ú–´
80‚ö°"

[node name="CollectorButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/BuildingRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üèÉ
–ö–û–õ–õ–ï–ö–¢–û–†
90‚ö°+15üíé"

[node name="TowerButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/BuildingRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üóº
–ë–ê–®–ù–Ø
60‚ö°"

[node name="TrainingButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/BuildingRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üéñÔ∏è
–õ–ê–ì–ï–†–¨
120‚ö°+20üíé"

[node name="AcademyButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/BuildingRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üîÆ
–ê–ö–ê–î–ï–ú–ò–Ø
100‚ö°+30üíé"

[node name="AbilityRow" type="HBoxContainer" parent="GameUI/BottomPanel/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FireballButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/AbilityRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üî•
–û–ì–ù–ï–ù–ù–´–ô –®–ê–†
40‚ö°+15üíé"

[node name="HealButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/AbilityRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üíö
–õ–ï–ß–ï–ù–ò–ï
30‚ö°+10üíé"

[node name="ShieldButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/AbilityRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üõ°Ô∏è
–©–ò–¢
50‚ö°+20üíé"

[node name="LightningButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/AbilityRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "‚ö°
–ò–û–ù–ù–ê–Ø –ë–£–†–Ø
60‚ö°+25üíé"

[node name="HeroButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/AbilityRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
disabled = true
text = "ü¶∏
–ì–ï–†–û–ô
‚è∞ –ù—É–∂–µ–Ω –∞–ª—Ç–∞—Ä—å"

[node name="SpecialRow" type="HBoxContainer" parent="GameUI/BottomPanel/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RallyButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/SpecialRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üéØ
–°–ë–û–† –í–û–ô–°–ö
–ë–µ—Å–ø–ª–∞—Ç–Ω–æ"

[node name="RetreatButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/SpecialRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "üèÉ
–û–¢–°–¢–£–ü–õ–ï–ù–ò–ï
–ë–µ—Å–ø–ª–∞—Ç–Ω–æ"

[node name="UpgradeButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/SpecialRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "‚¨ÜÔ∏è
–£–õ–£–ß–®–ï–ù–ò–ï
150‚ö°+50üíé"

[node name="NukeButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/SpecialRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "‚ò¢Ô∏è
–Ø–î–ï–†–ù–´–ô –£–î–ê–†
200‚ö°+100üíé"

[node name="MenuButton" type="Button" parent="GameUI/BottomPanel/BottomContainer/SpecialRow"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "‚öôÔ∏è
–ú–ï–ù–Æ
–ë–µ—Å–ø–ª–∞—Ç–Ω–æ"

[node name="Instructions" type="Label" parent="GameUI"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 90.0
offset_right = -10.0
offset_bottom = 290.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "üéÆ –£–ü–†–ê–í–õ–ï–ù–ò–ï:
üñ±Ô∏è –ü–ö–ú + –¥—Ä–∞–≥ = –∫–∞–º–µ—Ä–∞
üéÆ –°–∫—Ä–æ–ª–ª = –∑—É–º
üèóÔ∏è –ó–ê–ñ–ú–ò –ò –ü–ï–†–ï–¢–ê–©–ò –∫–Ω–æ–ø–∫—É!
1Ô∏è‚É£ –ó–∞–∂–º–∏ –∫–Ω–æ–ø–∫—É –∑–¥–∞–Ω–∏—è
2Ô∏è‚É£ –ü–µ—Ä–µ—Ç–∞—â–∏ –Ω–∞ –∫–∞—Ä—Ç—É
3Ô∏è‚É£ –û—Ç–ø—É—Å—Ç–∏ = –ø–æ—Å—Ç—Ä–æ–π–∫–∞!

üè∞ –ö–∞–∑–∞—Ä–º—ã –ø—Ä–æ–∏–∑–≤–æ–¥—è—Ç —Å–æ–ª–¥–∞—Ç
ü¶∏ –ì–µ—Ä–æ–π: –∑–∞—Ö–≤–∞—Ç–∏ 2 –±–æ–∫–æ–≤—ã—Ö —Ç–µ—Ä—Ä–∏—Ç–æ—Ä–∏–∏!"
vertical_alignment = 1

[node name="SpawnerPanel" parent="." instance=ExtResource("2_spawner")]
visible = false
anchors_preset = 15
anchor_top = 0.0
grow_vertical = 2
